<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="pref_category_function_key" android:title="@string/pref_category_fuction_title">
    	<EditTextPreference android:title="@string/pref_key_count_title" android:key="pref_key_count_key" android:defaultValue="100" />
    </PreferenceCategory>
    <PreferenceCategory android:key="pref_category_sender_key" android:title="@string/pref_category_sender_title">
    	<EditTextPreference android:title="@string/pref_sender_mailaddr_title" android:key="pref_sender_mailaddr_key" />
    	<EditTextPreference android:title="@string/pref_sender_pwd_title" android:key="pref_sender_pwd_key" />
    </PreferenceCategory>
    <PreferenceCategory android:key="pref_category_receiver_key" android:title="@string/pref_category_receiver_title">
    	<EditTextPreference android:title="@string/pref_receiver_mailaddr_title" android:key="pref_receiver_mailaddr_key" />
    </PreferenceCategory>
</PreferenceScreen>
